# neuesvomtage

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  guidelines.md  manage.py  pyproject.toml  requirements.txt
api/: urls.py  views.py
api/templates/api/: swagger-ui.html
base/: context_processors.py  models.py  serializers.py  urls.py
base/management/commands/: update_feeds.py  update_icons.py
base/migrations/: 0001_initial.py  0002_feed_last_update_status.py  0005_auto_20181216_1047.py  0006_alter_feed_image_alter_feed_image_large.py  0007_feed_favicon.py  0009_alter_topword_options.py
base/static/theme/: theme.scss
base/templates/: base.html
base/templates/base/: index.html  xhr_feed_older_news.html
contrib/: demo_data.json
locale/de/LC_MESSAGES/: django.po
neuesvomtage/: .env.example  asgi.py  main.py  settings.py  urls.py  wsgi.py
neuesvomtage/base/: admin.py  context_processors.py  urls.py  utils.py  views.py
neuesvomtage/base/migrations/: 0001_initial.py  0002_feed_last_update_status.py  0003_feed_include_in_quiz.py  0004_auto_20181117_1632.py  0005_auto_20181216_1047.py  0006_alter_feed_image_alter_feed_image_large.py  0007_feed_favicon.py  0008_topword.py  0009_alter_topword_options.py  0010_remove_feed_image_remove_feed_image_large.py  0011_topwordlemma_topwordlemmaword.py  0012_alter_entry_options.py  0013_alter_entry_options.py
neuesvomtage/contrib/: frequent_french.txt  frequent_german.txt
neuesvomtage/neuesvomtage/: settings.py  urls.py  wsgi.py
neuesvomtage/quiz/: urls.py  views.py
quiz/: views.py
(+13 files in other folders)
